{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 33,
  "lineage": "483a98a1-689b-427a-efcc-c107a4977e40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "levpn_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034766565c2993a90",
            "arn": "arn:aws:ec2:ap-southeast-1:659125779559:elastic-ip/eipalloc-034766565c2993a90",
            "association_id": "eipassoc-023c76c5c04c8adb2",
            "domain": "vpc",
            "id": "eipalloc-034766565c2993a90",
            "instance": "i-0e1bdec22ae05156c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c3f647e4dcee496f",
            "private_dns": "ip-172-31-31-81.ap-southeast-1.compute.internal",
            "private_ip": "172.31.31.81",
            "public_dns": "ec2-18-143-210-43.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.210.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.levpn_asia",
            "aws_key_pair.levpn_asia",
            "aws_security_group.levpn_asia",
            "data.aws_ami.ubuntu_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "levpn_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fdbaee49f329336",
            "arn": "arn:aws:ec2:eu-west-1:659125779559:elastic-ip/eipalloc-03fdbaee49f329336",
            "association_id": "eipassoc-0892d0f46e781a5b7",
            "domain": "vpc",
            "id": "eipalloc-03fdbaee49f329336",
            "instance": "i-086b1b610c5184bd0",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01aae5a7ca3cf0866",
            "private_dns": "ip-172-31-12-120.eu-west-1.compute.internal",
            "private_ip": "172.31.12.120",
            "public_dns": "ec2-54-246-209-77.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.209.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.levpn_eu",
            "aws_key_pair.levpn_eu",
            "aws_security_group.levpn_eu",
            "data.aws_ami.ubuntu_eu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "levpn_sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sa",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd9e3ed143305cce",
            "arn": "arn:aws:ec2:sa-east-1:659125779559:elastic-ip/eipalloc-0bd9e3ed143305cce",
            "association_id": "eipassoc-0f76e2c7b9828305e",
            "domain": "vpc",
            "id": "eipalloc-0bd9e3ed143305cce",
            "instance": "i-0e77e8882fd8425aa",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0aceb0648ba91cb59",
            "private_dns": "ip-172-31-33-119.sa-east-1.compute.internal",
            "private_ip": "172.31.33.119",
            "public_dns": "ec2-18-228-141-239.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.141.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.levpn_sa",
            "aws_key_pair.levpn_sa",
            "aws_security_group.levpn_sa",
            "data.aws_ami.ubuntu_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "levpn_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bbcd116c965885a",
            "arn": "arn:aws:ec2:us-east-1:659125779559:elastic-ip/eipalloc-00bbcd116c965885a",
            "association_id": "eipassoc-00b1d76ef39f9237e",
            "domain": "vpc",
            "id": "eipalloc-00bbcd116c965885a",
            "instance": "i-034a5022767e3f419",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0961aa89e09b70f91",
            "private_dns": "ip-172-31-42-89.ec2.internal",
            "private_ip": "172.31.42.89",
            "public_dns": "ec2-98-94-249-238.compute-1.amazonaws.com",
            "public_ip": "98.94.249.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.levpn_us",
            "aws_key_pair.levpn_us",
            "aws_security_group.levpn_us",
            "data.aws_ami.ubuntu_us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "levpn_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b63ddeab4f8a92db",
            "arn": "arn:aws:ec2:ap-southeast-1:659125779559:instance/i-0e1bdec22ae05156c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1bdec22ae05156c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "levpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3f647e4dcee496f",
            "private_dns": "ip-172-31-31-81.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.81",
            "public_dns": "ec2-18-143-210-43.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.210.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002df2472e5563451",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "levpn-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0313155478f53e129",
            "tags": {
              "Name": "levpn-ap-southeast-1"
            },
            "tags_all": {
              "Name": "levpn-ap-southeast-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c51e1de5956b37d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.levpn_asia",
            "aws_security_group.levpn_asia",
            "data.aws_ami.ubuntu_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "levpn_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06baa42b2e92978d7",
            "arn": "arn:aws:ec2:eu-west-1:659125779559:instance/i-086b1b610c5184bd0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086b1b610c5184bd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "levpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01aae5a7ca3cf0866",
            "private_dns": "ip-172-31-12-120.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.120",
            "public_dns": "ec2-54-246-209-77.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.209.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d7a95cc610aa640",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "levpn-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e749a854e4fcceb",
            "tags": {
              "Name": "levpn-eu-west-1"
            },
            "tags_all": {
              "Name": "levpn-eu-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d03b2c1ca1afd17f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.levpn_eu",
            "aws_security_group.levpn_eu",
            "data.aws_ami.ubuntu_eu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "levpn_sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sa",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046979544cd9e3d7b",
            "arn": "arn:aws:ec2:sa-east-1:659125779559:instance/i-0e77e8882fd8425aa",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e77e8882fd8425aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "levpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aceb0648ba91cb59",
            "private_dns": "ip-172-31-33-119.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.119",
            "public_dns": "ec2-18-228-141-239.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.141.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0842c36e74d800fe4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "levpn-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0892d2ce731a37a07",
            "tags": {
              "Name": "levpn-sa-east-1"
            },
            "tags_all": {
              "Name": "levpn-sa-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0448e7e93cd338921"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.levpn_sa",
            "aws_security_group.levpn_sa",
            "data.aws_ami.ubuntu_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "levpn_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff290337e78c83bf",
            "arn": "arn:aws:ec2:us-east-1:659125779559:instance/i-034a5022767e3f419",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034a5022767e3f419",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "levpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0961aa89e09b70f91",
            "private_dns": "ip-172-31-42-89.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.89",
            "public_dns": "ec2-98-94-249-238.compute-1.amazonaws.com",
            "public_ip": "98.94.249.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7bb9383da77ca33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "levpn-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011ff54f304817dde",
            "tags": {
              "Name": "levpn-us-east-1"
            },
            "tags_all": {
              "Name": "levpn-us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c5c1b6ab3d59538"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.levpn_us",
            "aws_security_group.levpn_us",
            "data.aws_ami.ubuntu_us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levpn_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659125779559:security-group/sg-02c51e1de5956b37d",
            "description": "levpn tunnel server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c51e1de5956b37d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "levpn-sg",
            "name_prefix": "",
            "owner_id": "659125779559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad08a02fffe08717"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levpn_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:659125779559:security-group/sg-0d03b2c1ca1afd17f",
            "description": "levpn tunnel server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d03b2c1ca1afd17f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "levpn-sg",
            "name_prefix": "",
            "owner_id": "659125779559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fda0984c0d4849c9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levpn_sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sa",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659125779559:security-group/sg-0448e7e93cd338921",
            "description": "levpn tunnel server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0448e7e93cd338921",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "levpn-sg",
            "name_prefix": "",
            "owner_id": "659125779559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08352aee40386c19e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levpn_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659125779559:security-group/sg-02c5c1b6ab3d59538",
            "description": "levpn tunnel server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c5c1b6ab3d59538",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "levpn-sg",
            "name_prefix": "",
            "owner_id": "659125779559",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce337661ee8f7dee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}